--- a/Lab2-Start/Lab2-Start.vcxproj.filters
+++ b/Lab2-Start/Lab2-Start.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="src\pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\glad.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
